# Medical_diagnostics

./: .coverage  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
organisation/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
organisation/migrations/: 0001_initial.py
organisation/templates/employee/: employee_delete.html  employee_detail.html  employee_form.html  employee_list.html  employee_update.html
organisation/templates/organisation/: contacts.html  feedback.html  home.html  organisation.html  organisation_form.html  organisation_update.html  services.html  site_management.html
organisation/templates/record/: record_delete.html  record_detail.html  record_form.html  record_list.html  record_update.html
registration/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
registration/migrations/: 0001_initial.py
registration/templates/registration/: personal_account.html  registration_delete.html  registration_detail.html  registration_form.html  registration_list.html
users/: admin.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
users/management/commands/: create_admin_group.py  create_manager_group.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_number_snils.py  0003_alter_user_managers.py
users/templates/users/: base.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  (+6 more)
