[project]
name = "medical-diagnostics"
version = "0.1.0"
description = ""
authors = [
    {name = "chiri",email = "chirik2000xd@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
